--- a/doctrinaSocial/index.html
+++ b/doctrinaSocial/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>APOLOGETICA</title>
+  <title>DOCTRINA SOCIAL</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -21,48 +21,17 @@
      <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
 
- 
-    <!-- ****************************************************************** -->
-
-    <section id="00">
+    <section id="Formación">
       <hr>
-      <h1> FORMACIÓN</h1>
+      <h1> TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="../liturgia/misa.html">MISA- MISAL ROMANO</a></li>
+          <li class="li"><a href="/doctrinaSocial/Agenda2030.html">AGENDA 2030</a></li>
+          <li class="li"><a href=""></a></li>
 
         </ol>
 
       </div>
     </section>
-    <!-- ****************************************************************** -->
-    <section id="01">
-      <h2></h2>
-
-
-    </section>
-    <!-- ****************************************************************** -->
-    <section id="02">
-      <h2></h2>
-
-
-    </section>
-    <!-- ****************************************************************** -->
-    <section id="03">
-      <h2></h2>
-
-
-    </section>
-    <!-- ****************************************************************** -->
-    <section id="04">
-      <h2></h2>
-
-
-    </section>
-    <!-- ****************************************************************** -->
-
-
-
-
 </body>
 </html>
