--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -24,19 +24,20 @@
     <h1 class="init">IGLESIA</h1>
     <div>
       <ol>
-        <li class="li"><a href="#UNA">UNA</a></li>
-        <li class="li"><a href="#SANTA">SANTA</a></li>
-        <li class="li"><a href="#CATÓLICA">CATÓLICA</a></li>
-        <li class="li"><a href="#APOSTÓLICA">APOSTÓLICA</a></li>
-        <li class="li"><a href="#EL PAPA">EL PAPA</a></li>
-        <li class="li"><a href="#SACERDOCIO">EL SACERDOCIO</a></li>
-        <li class="li"><a href="#CONFESION">LA CONFESIÓN</a></li>
-        <li class="li"><a href="#BABILONIA">BABILONIA </a></li>
+        <li class="li"><a href="#01">UNA</a></li>
+        <li class="li"><a href="#02">SANTA</a></li>
+        <li class="li"><a href="#03">CATÓLICA</a></li>
+        <li class="li"><a href="#04">APOSTÓLICA</a></li>
+        <li class="li"><a href="#05">EL PAPA</a></li>
+        <li class="li"><a href="#06">EL SACERDOCIO</a></li>
+        <li class="li"><a href="#07">LA CONFESIÓN</a></li>
+        <li class="li"><a href="#08">BABILONIA </a></li>
+        <li class="li"><a href="#09">IGLESIA Y LAS SECTAS </a></li>
       </ol>
     </div><br>
     <hr>
     <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////// -->
-    <section id="UNA">
+    <section id="01">
       <h2>UNA</h2>
       <P>Mateo 16,13-19 <br>
         1. La gente pregunta quien es Jesús<br>
@@ -65,7 +66,9 @@
         1. Un solo Señor, una sola fe y n solo bautismo. <br>
         2. Una sola iglesia<br><br>
 
-        LA UNIDAD<br>
+      
+
+      <H2>  LA UNIDAD</H2><br>
         Mateo 16:18 -19 <br>
         1. Una sola iglesia <br>
         2. El maligno no prevalecerá <br>
@@ -111,7 +114,7 @@
         Juan 20:21 <br>
         1. Estar en la paz del Señor<br>
         2. Cumplir la misión del envío <br><br>
-        LA DIVISION<br>
+    <H2>    LA DIVISION</H2><br>
         Gálatas 1 7 no que sea otro, sino que hay algunos que os están turbando y quieren deformar el Evangelio de
         Cristo—. <br>
         Tito 3 10 Al sectario, después de una y otra amonestación, rehúyele; <br>
@@ -137,7 +140,7 @@
       </P>
     </section>
     <!-- ********************************************************************** -->
-    <section id="SANTA">
+    <section id="02">
       <h2>SANTA</h2>
       <p>a. Se dice que: ¡cómo esta iglesia llena de pecadores puede ser la iglesia de Jesucristo!a. Se dice que: ¡cómo
         esta iglesia llena de pecadores puede ser la iglesia de Jesucristo! <br> <br>
@@ -193,7 +196,7 @@
       </p>
     </section>
     <!-- ********************************************************************** -->
-    <section id="CATÓLICA">
+    <section id="03">
       <h2>CATÓLICA</h2>
       <p>Origen del nombre <br>
         La palabra católica viene del latín CATHOLICUS y este del griego KATHOLIKÓS. DE KATA (sobre, hacia abajo,
@@ -260,7 +263,7 @@
       </p>
     </section>
     <!-- ********************************************************************** -->
-    <section id="APOSTÓLICA">
+    <section id="04">
       <h2>APOSTÓLICA</h2>
       <p>Está fundada sobre la fe de los apóstoles <br>
         En Efesios 2 20 cristo es la piedra y en Ef y 1Pedro 2 5 lo son los cristianos<br>
@@ -340,7 +343,7 @@
       </p>
     </section>
     <!-- ********************************************************************** -->
-    <section id="EL PAPA">
+    <section id="05">
       <h2>EL PAPA</h2>
       <P>Sobre Pedro la piedra que eligió el Señor <br>
         Nos dicen que es eso del Papa, donde dice que Pedro fue Papa……<br><br>
@@ -537,7 +540,7 @@
 
     </section>
     <!-- ********************************************************************** -->
-    <section id="SACERDOCIO">
+    <section id="06">
       <h1>SACERDOCIO</h1>
 
       <H2>
@@ -576,7 +579,7 @@
 
     </section>
     <!-- *********************************************************** -->
-    <section id="CONFESION"></section>
+    <section id="07"></section>
 
     <h2>CONFESIÓN</h2> <br>
     <br>
@@ -622,20 +625,37 @@
 
 
     <!-- *********************************************************** -->
-    <section id="BABILONIA">
+    <section id="08">
       <h2>BABILONIA LA GRANDE</h2>
 
-      Apo 17:9 Esto, para la mente que tenga sabiduría: Las siete cabezas son siete montes, sobre los cuales se sienta
-      la
-      mujer,
+      Apo 17:9 Esto, para la mente que tenga sabiduría: Las siete cabezas son siete montes, sobre los cuales se sienta la mujer, <br><br>
 
-      BABILONIA no es una persona,, una iglesia o institucion sino una gran ciudad
-      Apo 17:18 Y la mujer que has visto es la gran ciudad que reina sobre los reyes de la tierra.
-      El estado vaticano no es una gran ciudad mide 0.49Km2 [49 hectáreas]
+      BABILONIA no es una persona,, una iglesia o institucion sino una gran ciudad<br><br>
+      Apo 17:18 Y la mujer que has visto es la gran ciudad que reina sobre los reyes de la tierra.<br>
+      El estado vaticano no es una gran ciudad mide 0.49Km2 [49 hectáreas]<br><br>
 
-      EL VATICANO NO ESTA SOBRE 7 COLINAS SINO SOBRE SOLO 1, LA COLINA VATICANA. UBICADA AL OESTE DEL TIBER
+      EL VATICANO NO ESTA SOBRE 7 COLINAS SINO SOBRE SOLO 1, LA COLINA VATICANA. UBICADA AL OESTE DEL TIBER<br><br>
 
-      las 7 colinas se hallan al este del Tiber, y era donde se ubicaba la Roma antigua.
+      las 7 colinas se hallan al este del Tiber, y era donde se ubicaba la Roma antigua.<br>
 
 
     </section>
+    <!-- ********************************************* -->
+     <section id="09">
+      <h2>La iglesia y las sectas</h2>
+      
+      <ol>
+        <li>Jn 10,10-11 Ovejas en medio de lobos</li>
+      <li>Mc 6,34 El Señor no quiere que estemos sin pastor</li>
+      <li>Jn 10,16 a pesar de todo quiere unificar el rebaño</li>
+      <li>1 Tim 3, 15 La iglesia fundamento de la verdad </li>
+      <li>2Te 2,9 Milagros</li>
+      <li>1Pe 2,7 los que no creen en la Palabra</li>
+    </ol>
+
+     </section>
+    <!-- ********************************************* -->
+
+  
+</body>
+</html>
