--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -20,25 +20,25 @@
             <a href="01formacion.html" class="nombre">FORMACIÓN </a>
         </div>
     </header> <br><br>
-    <!-- *************************************************************************** -->
+    <!-- ************************************************************* -->
 
     <H1>LA VIRGEN</H1>
 
     <OL>
 
-        <li><a href="#INTRO">INTRODUCCIÓN </a> </li>
-        <li><a href="#QUIEN_ES">QUIÉN ES MARÍA </a> </li>
+        <li class="li"><a href="#INTRO">INTRODUCCIÓN </a> </li>
+        <li class="li"><a href="#QUIEN_ES">QUIÉN ES MARÍA </a> </li>
         <li> EN EL GÉNESIS </li>
         <li> ENTENDER A CABALIDAD QUE ES UNA SEÑAL </li>
         <li> EN LOS EVANGELIOS </li>
         <li> Existe un paralelo entre la caída y la cruz </li>
         <li> EN EL APOCALIPSIS </li>
-        <li><a href="#dogmas">LOS DOGMAS MARIANOS </a> </li>
+        <li class="li"><a href="#dogmas">LOS DOGMAS MARIANOS </a> </li>
         <li> LA MATERNIDAD DIVINA </li>
         <li> LA VIRGINIDAD PERPETUA </li>
         <li> LA INMACULADA CONCEPCIÓN </li>
         <li> LA ASUNCIÓN </li>
-        <li><a href="$APOL">APOLOGÉTICA</a></li>
+        <li class="li"><a href="#APOL">APOLOGÉTICA</a></li>
         <li> a. HASTA QUE </li>
         <li> b. PRIMOGÉNITO </li>
         <li> c. EL CELIBATO. </li>
@@ -58,7 +58,7 @@
         <li> Tenía 12 años y no se mencionan hermanos </li>
         <li> En la crucifixión </li>
         <li> EN LA RESURRECCIÓN </li>
-        <li><a href="#rosario">EL ROSARIO</a></li>
+        <li class="li"><a href="#rosario">EL ROSARIO</a></li>
 
     </OL>
 
@@ -687,6 +687,11 @@
     Convengamos, pudo y quiso. <br>
     <br>
     LA VIRGINIDAD PERPETUA <br>
+    <ol>
+      <li>La Biblia no dice de nadie que es hijo de María la madre de Jesús</li>
+      <li>1Co 15, 5 dice de 500 hermanos del Señor</li>
+      <li></li>
+    </ol>
     LA INMACULADA CONCEPCIÓN <br>
     Ella es la nueva Eva. Toda llena de gracia, como Eva antes del pecado. <br>
     LA ASUNCIÓN <br>
