--- a/salud/index.html
+++ b/salud/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <title>APOLOGETICA</title>
 </head>
+<script>
+  let numero;
+
+do {
+  numero = prompt("Ingresa la clave ");
+  numero = Number(numero);
+
+  if (numero !== 2607) {
+    alert("Número incorrecto. Intenta de nuevo.");
+  }
+} while (numero !== 2607);
+
+alert("¡Correcto! Ingresaste el número 2607.");
+
+</script>
 <body>
   <p id="alInicio" class="principio"></p>
     <header>
@@ -29,7 +44,7 @@
       <h1> FORMACIÓN</h1>
       <div>
         <ol>
-          <li class="li"><a href="../liturgia/misa.html">MISA- MISAL ROMANO</a></li>
+          <li class="li"><a href="/salud/MedidasCarlos.html">MEDIDAS CARLOS</a></li>
 
         </ol>
 
