--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -32,6 +32,7 @@
           <li class="li"><a href="../liturgia/liturgia.html">LITURGIA</a></li>
           <li class="li"><a href="../noviciado/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
           <li class="li"><a href="../historia/index.html">HISTORIA DE LA IGLESIA</a></li>
+          <li class="li"><a href="/doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
         </ol>
       </div>
     </section>
