--- a/euangelium/biblia/biblia.html
+++ b/euangelium/biblia/biblia.html
@@ -24,7 +24,7 @@
     <h1 class="init">BIBLIA</h1>
     <div>
       <ol>
-        <li class="li"><a href="#INTERPRETACIÓN ">INTERPRETACIÓN</a></li>
+        <li class="li"><a href="/euangelium/biblia/Interpretacion.html ">INTERPRETACIÓN</a></li>
         <li class="li"><a href="#hermeneutica ">HERMENÉUTICA</a></li>
         <li class="li"><a href="#INSPIRACIÓN">INSPIRACIÓN</a></li>
         <li class="li"><a href="#PALABRA DE DIOS">PALABRA DE DIOS</a></li>
@@ -36,105 +36,7 @@
     </div><br>
     <hr>
     <!-- ////////////////////////////////////////////////////////////////////////// -->
-    <section id="INTERPRETACIÓN">
-      <h2>INTERPRETACIÓN</h2>
-      <p>PRIMER CRITERIO: LA CENTRALIDAD DE LA PERSONA DE JESUCRISTO <br>
-        1. Siempre nuestro punto de partida irrenunciable es Cristo, desde Jesús vemos todos los escritos. Desde el
-        Nuevo Testamento vemos la Biblia.
-        Jesús mismo después de decir que no ha venido a abolir la ley los profetas, nos aclara que significa para él
-        esto. <br><br>
-        Mat 5:17 No crean que he venido a suprimir la Ley o los Profetas. He venido, no para deshacer, sino para traer
-        lo definitivo. <br>
-        Mat 5:18 En verdad les digo: mientras dure el cielo y la tierra, no pasará una letra o una coma de la Ley hasta
-        que todo se realice. <br>
-        Mat 5:19 Por tanto, el que ignore el último de esos mandamientos y enseñe a los demás a hacer lo mismo, será el
-        más pequeño en el Reino de los Cielos. En cambio el que los cumpla y los enseñe, será grande en el Reino de los
-        Cielos. <br>
-        Mat 5:20 Yo se lo digo: si no se proponen algo más perfecto que lo de los fariseos o de los maestros de la Ley,
-        ustedes no pueden entrar en el Reino de los Cielos. <br><br>
-
-        2. De hecho consideramos que la Primera Alianza es una preparación para la revelación de Jesucristo, de allí
-        estas oposiciones <br>
-        Mat 5:21 Ustedes han escuchado lo que se dijo a sus antepasados: “No matarás; el homicida tendrá que enfrentarse
-        a un juicio.” <br>
-        Mat 5:22 Pero yo les digo: Si uno se enoja con su hermano, es cosa que merece juicio. El que ha insultado a su
-        hermano, merece ser llevado ante el Tribunal Supremo; si lo ha tratado de renegado de la fe, merece ser arrojado
-        al fuego de la gehena. <br>
-        Mat 5:23 Por eso, si tú estás para presentar tu ofrenda en el altar, y te acuerdas de que tu hermano tiene algo
-        contra ti, <br>
-        Mat 5:24 deja allí mismo tu ofrenda ante el altar, y vete antes a hacer las paces con tu hermano; después vuelve
-        y presenta tu ofrenda. <br>
-        Mat 5:25 Trata de llegar a un acuerdo con tu adversario mientras van todavía de camino al juicio. ¿O prefieres
-        que te entregue al juez, y el juez a los guardias, que te encerrarán en la cárcel? <br>
-        Mat 5:26 En verdad te digo: no saldrás de allí hasta que hayas pagado hasta el último centavo. <br>
-        Mat 5:27 Ustedes han oído que se dijo: “No cometerás adulterio.” <br>
-        Mat 5:28 Pero yo les digo: Quien mira a una mujer con malos deseos, ya cometió adulterio con ella en su corazón.
-        <br>
-        Mat 5:29 Por eso, si tu ojo derecho te está haciendo caer, sácatelo y tíralo lejos; porque más te conviene
-        perder una parte de tu cuerpo y no que todo tu cuerpo sea arrojado a la gehena. <br>
-        Mat 5:30 Y si tu mano derecha te lleva al pecado, córtala y aléjala de ti; porque es mejor que pierdas una parte
-        de tu cuerpo y no que todo tu cuerpo sea arrojado a la gehena. <br><br>
-
-        Mat 5:31 También se dijo: “El que se divorcie de su mujer, debe darle un certificado de divorcio.” <br>
-        Mat 5:32 Pero yo les digo: Si un hombre se divorcia de su mujer, fuera del caso de unión ilegítima, es como
-        mandarla a cometer adulterio: el hombre que se case con la mujer divorciada, cometerá adulterio. <br><br>
-
-
-        Mat 5:33 Ustedes han oído lo que se dijo a sus antepasados: “No jurarás en falso, y cumplirás lo que has jurado
-        al Señor.” <br>
-        Mat 5:34 Pero yo les digo: ¡No juren! No juren por el cielo, porque es el trono de Dios; <br>
-        Mat 5:35 ni por la tierra, que es la tarima de sus pies; ni por Jerusalén, porque es la ciudad del Gran Rey.
-        <br>
-        Mat 5:36 Tampoco jures por tu propia cabeza, pues no puedes hacer blanco o negro ni uno solo de tus cabellos.
-        <br>
-        Mat 5:37 Digan sí cuando es sí, y no cuando es no; cualquier otra cosa que se le añada, viene del demonio.
-        <br><br>
-
-
-        Mat 5:38 Ustedes han oído que se dijo: “Ojo por ojo y diente por diente.” <br>
-        Mat 5:39 Pero yo les digo: No resistan al malvado. Antes bien, si alguien te golpea en la mejilla derecha,
-        ofrécele también la otra. <br>
-        Mat 5:40 Si alguien te hace un pleito por la camisa, entrégale también el manto. <br>
-        Mat 5:41 Si alguien te obliga a llevarle la carga, llévasela el doble más lejos. <br>
-        Mat 5:42 Da al que te pida, y al que espera de ti algo prestado, no le vuelvas la espalda. <br><br>
-
-        Mat 5:43 Ustedes han oído que se dijo: “Amarás a tu prójimo y no harás amistad con tu enemigo.” <br>
-        Mat 5:44 Pero yo les digo: Amen a sus enemigos y recen por sus perseguidores, <br>
-        Mat 5:45 para que así sean hijos de su Padre que está en los Cielos. Porque él hace brillar su sol sobre malos y
-        buenos, y envía la lluvia sobre justos y pecadores. <br>
-        Mat 5:46 Si ustedes aman solamente a quienes los aman, ¿qué mérito tiene? También los cobradores de impuestos lo
-        hacen. <br>
-        Mat 5:47 Y si saludan sólo a sus amigos, ¿qué tiene de especial? También los paganos se comportan así. <br>
-        Mat 5:48 Por su parte, sean ustedes perfectos como es perfecto el Padre de ustedes que está en el Cielo.
-        <br><br>
-
-        En Marcos 9, es la escena de la transfiguración, donde la Ley representada por Moisés, los profetas por Elías
-        entran en dialogo con la Nueva Ley que es Jesús, el Padre dirá al final refiriéndose a Jesús escúchenlo a él.
-        <br>
-        Mar 9:2 Seis días después, Jesús tomó consigo a Pedro, a Santiago y a Juan y los llevó a ellos solos a un monte
-        alto. A la vista de ellos su aspecto cambió completamente. <br>
-        Mar 9:3 Incluso sus ropas se volvieron resplandecientes, tan blancas como nadie en el mundo sería capaz de
-        blanquearlas. <br>
-        Mar 9:4 Y se les aparecieron Elías y Moisés, que conversaban con Jesús. <br>
-        Mar 9:5 Pedro tomó la palabra y dijo a Jesús: “Rabbí, ¡qué bueno es que estemos aquí! Levantemos tres chozas:
-        una para ti, otra para Moisés y otra para Elías.” <br>
-        Mar 9:6 En realidad no sabía lo que decía, porque estaban aterrados. <br>
-        Mar 9:7 En eso se formó una nube que los cubrió con su sombra, y desde la nube llegaron estas palabras: “Este es
-        mi Hijo, el Amado, escúchenlo.”
-        Mar 9:8 Y de pronto, mirando a su alrededor, no vieron ya a nadie; sólo Jesús estaba con ellos.<br><br>
-        3. EJEMPLOS<br>
-        Los alimentos<br>
-        El sábado <br>
-        Diezmo<br>
-        Circuncisión <br>
-        El alma <br>
-        La sangre<br>
-        Siempre la primera opción es buscar que dice el Señor Jesucristo, palabra definitiva y única del Padre. Jn 1,1
-        Heb 1,1.<br>
-
-      </p>
-    </section>
-    <!-- *************************************************************************** -->
+  
 
     <section id="hermeneutica">
       HERMENÉUTICA <br>
