--- a/oracion/EstacionesOracion/01Estacion.html
+++ b/oracion/EstacionesOracion/01Estacion.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>ORACIÓN</title>
   </head>
 
@@ -14,11 +14,11 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="../index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"><img src="/media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="/index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
-    <!-- *************************************************************************** -->
+    <!-- ************************************************************* -->
     <h1 class="init">OBJETIVO</h1>
        <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</h3>
@@ -30,13 +30,24 @@
        <div>
          <H2 class="titulo">ENLACES A TEMAS</H2>
          <ol>
-           <li class="li"><a href="#uno">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#01">DISPOCIONES PARA ACOGER LA GRACIA</a></li>
+           <li class="li"><a href="#02">MODELOS DE ORACIÓN</a></li>
+           <li class="li"><a href="#03">PADRE NUESTRO</a></li>
+           <li class="li"><a href="#04">AVE MARÍA</a></li>
+           <li class="li"><a href="#05">ORACIÓN MENTAL</a></li>
+           <li class="li"><a href="#06">ORACIÓN DE CONTEMPLACIÓN</a></li>
+           <li class="li"><a href="#07">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#08">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#09">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#10">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#11">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#12">ESTACIÓN 1</a></li>
       
           </ol>
         </div>
       </section>
-    <!-- ************************************************************ -->
-    <section id="uno">
+<!-- ************************************************************ -->
+<section id="01">
 <p>
      <h1 class="titulo"> 1° ESTACIÓN</h1>
   <h2 class="subtitulo">DISPOSICIÓN PARA ACOGER LA GRACIA</h2>
@@ -46,14 +57,15 @@
   <li>LA ACCIÓN DEL ES</li>
   <li>EL SILENCIO</li>
 </ol>
-<h4 class="subtitulo">1. LEX ORANDI LEX VIVENDI</h4>
+<h4 class="titulo">1. LEX ORANDI LEX VIVENDI</h4>
 La oración y la conversión van juntas. La una lleva a la otra.
 <h3 class="cita">"Si no eres persona de oración, no creo en la bondad de tus intenciones". José María Escribá</h3>
 <h3 class="cita">“La oración hará que un hombre deje de pecar, o el pecado incitará a un hombre a dejar de orar.”</h3>
 Teresa De Jesús, Francisco De Asís, etc. Cada santo es un maestro en la oración.
-<h3 class="lema"><b><i>Oratio est gratia praesentiae</i></b></h3>
+
 <!-- **************************************** -->
 <h4 class="titulo">2. LA ORACIÓN DIARIA.</h4>
+<h3 class="lema"><b><i>Oratio est gratia praesentiae</i></b></h3>
 El primer paso será la oración diaria, disponer un momento para hacer oración. De ser posible en el mismo lugar y a la misma hora. <br>
 La oración será un encuentro con el Señor, como en todo dialogo es muy importante lo que decimos, y muchísimo más lo que escuchamos. <br>
 El dialogo implica buscar el bien en la verdad. Es el camino a la felicidad.<br>
@@ -91,7 +103,7 @@ c)	El estado del alma, alegría, deseo de conversión permanente<br>
   <H3 class="lema">Por eso la importancia fundamental de el examen de conciencia diario</H3>
 <p>Nuestro examen de conciencia se a de centrar en ver al Señor, no se trata de rechazar la cruz sino de acomodarnos a ella. Como lo hacen los esposos entre ellos, los padres con sus hijos, los mendigos con la cama improvisada. <br>El camino de santidad es según la voluntad de Dios y no según nuestra visión de santidad</p>
 <!-- **************************************** -->
-<h4 class="subtitulo">4. EL SILENCIO</h4>
+<h4 class="titulo">4. EL SILENCIO</h4>
 <p class="cita">San Juan de la Cruz: “La palabra de Dios es el silencio de Dios”.
   <br><br>
   San Francisco de Sales: “Nunca estamos menos solos que cuando estamos solos con Dios”.</p> <br><br>
@@ -109,7 +121,12 @@ Silencio que será una práctica de todo el día, silencio que nos dispone al en
 <p>Desde la cotidiana realidad aceptar la voluntad de Dios confiando en la Providencia <br><br>
 Se trata de vivir siempre en el presente, Mt 6,31-34; este es el sentido de pedir "Danos hoy el pan de cada día"</p>
 <p>
-<h3 class="subtitulo">MODELOS DE ORACIÓN</h3>
+
+</section>
+<!-- ******************************************************* -->
+<section id="02">
+  
+<h3 class="titulo">MODELOS DE ORACIÓN</h3>
 <ol>
   <li>ORACIÓN VOCAL</li>
   <li>ORACIÓN MENTAL</li>
@@ -127,17 +144,34 @@ El objetivo de la oración es la unidad con el Señor, viendo lo que él ve, ama
 Empezaremos por el Padre nuestro, luego el Ave María. De aquí pasaremos a iniciarnos en la oración mental.<br>
 Perseverar en la oración a pesar de las dificultades, son momentos de limpieza, de purificación <br>Regocijémonos en las pruebas, es el Señor que sale a nuestro encuentro<br>
 
+</section>
+<!-- ************************************************ -->
+<section id="03">
 <h3 class="subtitulo">LA ORACIÓN PERFECTA</h3>
 <b class="subtitulo">PADRE NUESTRO</b> CEC 2759-2865<br>
 <p>
- Fundamento Bíblico: <br>
+  <h3 class="subtitulo">CEC</h3>
+  <p>1257 El bautismo es necesario para la salvación</p>
+  <p>1262 La necesidad del nuevo ncimiento</p>
+  <p> 1265 enseña que el bautismo "borra el pecado original, hace al hombre hijo adoptivo de Dios
+    En la teología católica, todos los seres humanos son criaturas de Dios, pero se convierten en "hijos de Dios" en un sentido más pleno y espiritual a través del bautismo, que es visto como un nuevo nacimiento en Cristo (CEC 1279)</p>
+
+  <h3 class="subtitulo">Fundamentos Bíblicos</h3>
 Creación de todos los seres humanos:   En Génesis 1:27<br>
-2. Hijos de Dios por fe en Cristo: Juan 1:12 <br>
-3. Adopción por el Espíritu Santo:   Rom 8:14-17, Pablo escribe que "todos los que son guiados por el Espíritu de Dios, estos son hijos de Dios", y que los cristianos han recibido "un espíritu de adopción" por el cual pueden llamar a Dios "Abba, Padre". Aquí se enfatiza que el ser hijo de Dios es un don recibido a través del Espíritu Santo, que se da en el bautismo y la fe.<br><br>
-4. Ser hijos en Cristo:    En Gálatas 3:26-27, Pablo también enseña que "todos sois hijos de Dios por la fe en Cristo Jesús; porque todos los que habéis sido bautizados en Cristo, de Cristo os habéis revestido". Esto refuerza la idea de que el bautismo y la fe en Cristo son los medios por los cuales uno entra en la familia de Dios.<br><br>
-   El Catecismo de la Iglesia Católica (CEC 1265) enseña que el bautismo "borra el pecado original, hace al hombre hijo adoptivo de Dios
-   En la teología católica, todos los seres humanos son criaturas de Dios, pero se convierten en "hijos de Dios" en un sentido más pleno y espiritual a través del bautismo, que es visto como un nuevo nacimiento en Cristo (CEC 1279).<br><br>
- Perspectiva de los Padres de la Iglesia:<br>
+
+En el Credo reconocemos a Jesucristo como su único hijo <br><br>
+Col 1,3-23 Hijoe en el HIjo, con tal que vivamos según su voluntad. En Cristo fueron creadas todas las cosas, nosotros eramos extraños y enemigos(1.21) <br><br>
+ Juan 1:12 Hijos de Dios por fe en Cristo <br>
+Gal 4,1-7 la filiación divina <br><br>
+Rom 9,6-8 No todos los hijos de Abraham son herederos de la promesa<br><br>
+Stgo 4,4 la amistad con el mundo es enemistad con Dios<br><br>
+Jn 3,3-5 Nuevo nacimiento, nacer de Dios<br><br>
+Jn 8, 42-44 Quienes son hijos de Dios, y quienes no.<br><br>
+Rom 8:14-17, Pablo escribe que "todos los que son guiados por el Espíritu de Dios, estos son hijos de Dios", y que los cristianos han recibido "un espíritu de adopción" por el cual pueden llamar a Dios "Abba, Padre". Aquí se enfatiza que el ser hijo de Dios es un don recibido a través del Espíritu Santo, que se da en el bautismo y la fe<br><br>
+Gálatas 3:26-27, Pablo también enseña que "todos sois hijos de Dios por la fe en Cristo Jesús; porque todos los que habéis sido bautizados en Cristo, de Cristo os habéis revestido". Esto refuerza la idea de que el bautismo y la fe en Cristo son los medios por los cuales uno entra en la familia de Dios<br><br>
+
+Efe 1:5 eligiéndonos de antemano para ser sus hijos adoptivos por medio de Jesucristo*,<br><br>
+ <h3 class="subtitulo"> Perspectiva de los Padres de la Iglesia</h3>
 1. San Ireneo de Lyon:<br>
    San Ireneo (siglo II) enseñaba que la encarnación de Cristo tenía el propósito de hacer a los seres humanos hijos de Dios. En su obra "Contra las Herejías" (Libro III, 19,1), dice que Jesús "se hizo lo que somos para hacernos lo que Él es", es decir, hijos de Dios por adopción.<br><br>
 2. San Agustín:<br>
@@ -424,7 +458,10 @@ allá rýsai imás apó toú poniroú. Amín.<br>
   
   ρυσαι G4506:V-ADM-2S rescata ημας G2248:P-1AP a nosotros απο G575:PREP desde του G3588:T-GSM de el πονηρος G4190:A-GSM Maligno<br><br>
   </p>
+</section>
 <!-- ////////////////////////////////////////////////////////////// -->
+  <section id="04">
+    
  <h2 class="titulo">AVE MARÍA</h2>
  <H3 class="subtitulo"> Dios te salve, María</H3>
 <p>
@@ -528,7 +565,10 @@ A inicios del siglo XI aprox 1050 se hace popular, debido a una creciente devoci
   Ἁγία Μαρία, Μήτηρ τοῦ Θεοῦ, πρέσβευε ὑπὲρ ἡμῶν τῶν ἁμαρτωλῶν,<br> νῦν καὶ ἐν τῇ ὥρᾳ τοῦ θανάτου ἡμῶν. Ἀμήν.</p>
 
 
+</section>
 <!-- ////////////////////////////////////////////////////////////// -->
+ <section id="05">
+  
 <H3 class="titulo">ORACIÓN MENTAL</H3>
 De la oración vocal a la oración interior o mental, la llama también de recogimiento porque recoge las potencias del alma dentro de la persona<br>No centrarse en la persona, sino en Dios que está en cada uno de nosotros<br>
 La oración de recogimiento será corta, despacio, y haciendo pausas. Ella llama a este paso el fundamento de la oración. Y será lo suficientemente prolongada hasta descubrir los indicadores que ya se puede pasar al siguiente paso. Siempre tendremos oración vocal, también oración mental, de recogimiento o interior<br>
@@ -545,8 +585,10 @@ La imaginación y la memoria dificultan el camino; porque nos induce a juzgar de
 d.	El fruto<br>
 No solo llevamos la cruz con alegría, amamos a quien en ella está. El camino es el amor. Vivir amando al Señor, en el Señor a todos y en cada uno al Señor.<br><br>
 La necesidad de conocer al Señor es cada vez mayor, sin desesperación pero con pasión, es la cruz abrazada y elevada. Es abandonarnos a Dios confiadamente <br><br>
-
-
+</section>
+<!-- ******************************************************* -->
+<section id="06">
+  
 <H3 class="subtitulo">ORACIÓN DE CONTEMPLACIÓN</H3>
 La oración de contemplación llamada por ella oración de unión, está unida a los otros tipos de oración, los tipos de oración no están separados, pues a veces están unidos y en otras se pasa de una a otra. Es un proceso metodologico y gráfico que se usa para comprender mejor.
 </p>
