--- a/salud/index.html
+++ b/salud/index.html
@@ -41,9 +41,10 @@ alert("¡Correcto! Ingresaste el número 2607.");
 
     <section id="00">
       <hr>
-      <h1> FORMACIÓN</h1>
+      <h1> LUGARES</h1>
       <div>
         <ol>
+          <li class="li"><a href="/BlockGkc.html">BLOCK GKC</a></li>
           <li class="li"><a href="/salud/MedidasCarlos.html">MEDIDAS CARLOS</a></li>
 
         </ol>
