--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>ORACION</title>
   </head>
 
@@ -33,7 +33,7 @@
            <li class="li"><a href="../oracion/rosario.html">ROSARIO</a></li>
            <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
            <li class="li"><a href="../oracion/CaminoDEPerfeccion.html">CAMINO DE PERFECCIÓN</a></li>
-           <li class="li"><a href="/oracion/EstacionesOracion/compendioOracion.html">ORACIÓN</a></li>
+           <li class="li"><a href="../oracion/EstacionesOracion/compendioOracion.html">ORACIÓN</a></li>
           </ol>
         </div>
       </section>
