--- a/oracion/EstacionesOracion/compendioOracion.html
+++ b/oracion/EstacionesOracion/compendioOracion.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
     <title>ORACIÓN</title>
   </head>
 
@@ -14,7 +14,7 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"></a>
         <a href="../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
@@ -30,7 +30,7 @@
        <div>
          <H2 class="titulo">ENLACES A TEMAS</H2>
          <ol>
-           <li class="li"><a href="/oracion/EstacionesOracion/01Estacion.html">ESTACIÓN 1</a></li>
+           <li class="li"><a href="../oracion/EstacionesOracion/01Estacion.html">ESTACIÓN 1</a></li>
       
           </ol>
         </div>
