--- a/oracion/compendioOracion.html
+++ b/oracion/compendioOracion.html
@@ -14,7 +14,7 @@
       <div class="container">
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"><img src="../../media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"></a>
+        <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"></a>
         <a href="../../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
@@ -30,7 +30,7 @@
        <div>
          <H2 class="titulo">ENLACES A TEMAS</H2>
          <ol>
-           <li class="li"><a href="../EstacionesOracion/01Estacion.html">ESTACIÓN 1</a></li>
+           <li class="li"><a href="../oracion/01Estacion.html">ESTACIÓN 1</a></li>
       
           </ol>
         </div>
