--- a/Magisterio/index.html
+++ b/Magisterio/index.html
@@ -17,9 +17,9 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">TEMAS</h1>
-  
-    <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor,<br> ni aceptes como Amor lo que no proviene de la Verdad"
+    <h1 class="init">MAGISTERIO</h1>
+ 
+    <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</h3>
 
     <section id="Formación">
@@ -27,13 +27,8 @@
       <h1> TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
-          <li class="li"><a href="../oracion/oracion.html">ORACIÓN</a></li>
-          <li class="li"><a href="../liturgia/liturgia.html">LITURGIA</a></li>
-          <li class="li"><a href="../noviciado/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
-          <li class="li"><a href="../historia/index.html">HISTORIA DE LA IGLESIA</a></li>
-          <li class="li"><a href="../doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
-          <li class="li"><a href="../Magisterio/index.html">MAGISTERIO</a></li>
+          <li class="li"><a href="../Magisterio/EnciclicasYDocumentos.html">ENCICLICAS Y DOCUMENTOS</a></li>
+          <li class="li"><a href=""></a></li>
         </ol>
       </div>
     </section>
