--- a/oracion/Hagiostes.html
+++ b/oracion/Hagiostes.html
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">HAGIOSTES</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -29,7 +29,7 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="">MISA</a></li>
+      <li class="li"><a href="#01">INTRODUCCIÓN</a></li>
 
     </ol>
 
@@ -39,7 +39,7 @@
 <section id="01">
   <h2 class="subtitulo"></h2>
   <p>
-
+    En griego, la palabra es "ἁγιότης" (hagiotēs), derivada de "ἅγιος" (hagios), que significa "sagrado" o "santo". En la cultura griega, especialmente en el contexto cristiano, la santidad tiene una connotación de pureza moral y ética, siendo algo relacionado con la perfección y la virtud. En el Nuevo Testamento, "hagios" se refiere a aquellos que son apartados para Dios, los santos, y su llamado a vivir conforme a la voluntad divina.
   </p>
 
 </section>
