--- a/Magisterio/EnciclicasYDocumentos.html
+++ b/Magisterio/EnciclicasYDocumentos.html
@@ -3,24 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <title>APOLOGETICA</title>
 </head>
-<script>
-  let numero;
-
-do {
-  numero = prompt("Ingresa la clave ");
-  numero = Number(numero);
-
-  if (numero !== 2607) {
-    alert("Número incorrecto. Intenta de nuevo.");
-  }
-} while (numero !== 2607);
-
-alert("¡Correcto! Ingresaste el número 2607.");
-
-</script>
 <body>
   <p id="alInicio" class="principio"></p>
     <header>
@@ -32,21 +17,19 @@ alert("¡Correcto! Ingresaste el número 2607.");
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
-     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+    <h1 class="init">ENCICLICAS Y DOCUMENTOS</h1>
+     <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
 
  
     <!-- ****************************************************************** -->
 
     <section id="00">
       <hr>
-      <h1> LUGARES</h1>
+      <h1> TEMAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="/BlockGkc.html">BLOCK GKC</a></li>
-          <li class="li"><a href="./salud/MedidasCarlos.html">CONTROL</a></li>
-          <li class="li"><a href="./Alimentos.html">CONSTANTES VITALES</a></li>
+          <li class="li"><a href="./FiduciaSupplicans.html">FIDUCIA SUPPLICANS</a></li>
 
         </ol>
 
