--- a/oracion/Kadosh.html
+++ b/oracion/Kadosh.html
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">KADOSH</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -29,7 +29,7 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="">MISA</a></li>
+      <li class="li"><a href="#01">INTRODUCCIÓN</a></li>
 
     </ol>
 
@@ -37,9 +37,9 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="01">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">ETIMOLOGÍA</h2>
   <p>
-
+    La palabra para "santidad" en hebreo es "קדושה" (kedushá). Proviene de la raíz "קדש" (k-d-sh), que significa "separado" o "consagrado". En la cultura hebrea, la santidad implica una separación del mundo común para dedicarse a Dios. Algo santo es apartado del uso ordinario para estar en presencia de lo divino, como el Templo en Jerusalén o el Shabat, que es un día santo. Para los judíos, la santidad está profundamente relacionada con la pureza y la obediencia a las leyes de Dios.
   </p>
 
 </section>
