--- a/oracion/TestigosDFe.html
+++ b/oracion/TestigosDFe.html
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">TESTIGOS</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -29,7 +29,9 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="">MISA</a></li>
+      <li class="li"><a href="./Kadosh.html">KADOSH</a></li>
+      <li class="li"><a href="./Hagiostes.html">HAGIOSTES</a></li>
+      <li class="li"><a href="./Sanctitas.html">SANCTITAS</a></li>
 
     </ol>
 
