--- a/oracion/oracion.html
+++ b/oracion/oracion.html
@@ -20,8 +20,8 @@
     </header> <br><br>
     <!-- *************************************************************************** -->
     <h1 class="init">OBJETIVO</h1>
-       <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+       <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor,<br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
 
  
     <!-- ENLACE A PÁGINAS **********************************************************-->
@@ -34,6 +34,9 @@
            <li class="li"><a href="../oracion/CastilloInterior.html">LAS MORADAS</a></li>
            <li class="li"><a href="../oracion/CaminoDEPerfeccion.html">CAMINO DE PERFECCIÓN</a></li>
            <li class="li"><a href="../oracion/compendioOracion.html">ORACIÓN</a></li>
+           <li class="li"><a href="./TestigosDFe.html">TESTIGOS DE LA FE
+
+           </a></li>
           </ol>
         </div>
       </section>
