--- a/salud/Alimentos.html
+++ b/salud/Alimentos.html
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">ALIMENTOS</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -29,7 +29,11 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="">MISA</a></li>
+      <li class="li"><a href="#01">INTRO</a></li>
+      <li class="li"><a href="#02">ALIMENTOS</a></li>
+      <li class="li"><a href="#03">SOL</a></li>
+      <li class="li"><a href="#04">AGUA</a></li>
+      <li class="li"><a href="#05">EJERCICIO</a></li>
 
     </ol>
 
@@ -37,42 +41,86 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="01">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">INTRODUCCIÓN</h2>
   <p>
-
+    Existe un delicado balance entre los alimentos, ejercicio, aire, sol,agua, estado anímico, objetivos vitales
   </p>
 
 </section>
 <!-- ****************************************************************** -->
 <section id="02">
-  <h2 class="subtitulo"></h2>
-  <p>
-
-  </p>
+  <h2 class="subtitulo">ALIMENTOS</h2>
+ <ol>
+  <li>necesidad de ojas verdes de ser posible cada día</li>
+  <li>coliflor, brócoli, repollo, col, </li>
+  <li>rabanitos, nabo, ajo, cebolla</li>
+  <li>huevos, pescado</li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+ </ol>
 
 </section>
 <!-- ****************************************************************** -->
 <section id="03">
-  <h2 class="subtitulo"></h2>
-  <p>
-
-  </p>
+  <h2 class="subtitulo">SOL</h2>
+ <ol>
+  <li>al menos 10 minutos diarios</li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+ </ol>
 
 </section>
 <!-- ****************************************************************** -->
 <section id="04">
-  <h2 class="subtitulo"></h2>
-  <p>
-
-  </p>
+  <h2 class="subtitulo">AGUA</h2>
+ <ol>
+  <li>Depende de varios factores: temporada, edad, actividad fisica, </li>
+  <li>la deshidratación sube la presión</li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+ </ol>
 
 </section>
 <!-- ****************************************************************** -->
 <section id="05">
-  <h2 class="subtitulo"></h2>
-  <p>
-
-  </p>
+  <h2 class="subtitulo">EJERCICIO</h2>
+ <ol>
+  <li>Al menos 1 hora diaria</li>
+  <li>Ideal de 15 minutos cada hora</li>
+  <li>aerobicos, fuerza, concentración</li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+ </ol>
 
 </section>
 <!-- ****************************************************************** -->
