--- a/oracion/Kadosh.html
+++ b/oracion/Kadosh.html
@@ -40,6 +40,27 @@
   <h2 class="subtitulo">ETIMOLOGÍA</h2>
   <p>
     La palabra para "santidad" en hebreo es "קדושה" (kedushá). Proviene de la raíz "קדש" (k-d-sh), que significa "separado" o "consagrado". En la cultura hebrea, la santidad implica una separación del mundo común para dedicarse a Dios. Algo santo es apartado del uso ordinario para estar en presencia de lo divino, como el Templo en Jerusalén o el Shabat, que es un día santo. Para los judíos, la santidad está profundamente relacionada con la pureza y la obediencia a las leyes de Dios.
+
+  </p>
+  <p>
+    La palabra "kadosh" (קָדוֹשׁ) en hebreo significa "santo" o "sagrado", y tiene un profundo significado en el contexto religioso judío. Desde una perspectiva espiritual y religiosa, kadosh implica algo que está separado o apartado para un propósito especial, particularmente en relación con Dios. Este concepto tiene varias dimensiones: <br><br>
+
+ Significado de "Kadosh"<br><br>
+
+1. Separación y consagración: En la religión judía, lo que es "kadosh" está apartado de lo común o profano. Esta separación no significa aislamiento, sino que implica una dedicación exclusiva a Dios y a lo sagrado. Por ejemplo, el Shabat es considerado un día "kadosh", apartado del resto de los días de la semana para el descanso y la espiritualidad.<br><br>
+
+2. Dios es Kadosh: En el judaísmo, la santidad de Dios es central. Se menciona repetidamente en la Biblia que Dios es "kadosh". En Isaías 6:3, los ángeles proclaman: "Santo, santo, santo es el Señor de los ejércitos; toda la tierra está llena de su gloria". Esta triple repetición de "kadosh" enfatiza la trascendencia, la pureza y la absoluta perfección de Dios, que está más allá de cualquier imperfección humana.<br><br>
+
+3. El llamado a ser kadosh: La santidad no se atribuye solo a Dios, sino también al pueblo de Israel. En Levítico 19:2, Dios le dice a Moisés: "Habla a toda la congregación de los hijos de Israel, y diles: Santos (kadosh) seréis, porque santo soy yo, el Señor vuestro Dios". Esto implica que los seres humanos, al seguir las leyes y mandamientos divinos, pueden alcanzar un grado de santidad, reflejando la santidad de Dios.<br><br>
+
+4. Objetos y lugares kadosh: En el judaísmo, muchos objetos y lugares son considerados "kadosh" porque están dedicados al servicio de Dios. Por ejemplo, el Templo de Jerusalén era un lugar sagrado donde residía la presencia de Dios (Shejiná). Los objetos usados en el servicio del Templo, como el altar y los utensilios, eran consagrados (kadosh) para un uso exclusivo en la adoración a Dios.<br><br>
+
+5. Santificación en la vida diaria: El concepto de "kadosh" no se limita a los rituales religiosos. A través del cumplimiento de los mandamientos (mitzvot) y la práctica de la justicia y la ética, los judíos están llamados a santificar cada aspecto de su vida cotidiana. La santidad abarca tanto lo ritual como lo moral, y se expresa en la manera en que se vive conforme a la voluntad de Dios.<br><br>
+
+ Resumen<br><br>
+
+En resumen, "kadosh" en hebreo significa ser santo o sagrado, y en la tradición religiosa judía implica separación, consagración y dedicación a Dios. Dios es visto como el máximo ejemplo de santidad, y el pueblo de Israel está llamado a emular esa santidad en sus vidas, tanto en la observancia de los rituales como en la conducta ética y moral.
+
   </p>
 
 </section>
