--- a/BlockGkc.html
+++ b/BlockGkc.html
@@ -5,9 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/style.css">
   <title>Document</title>
+  <style>
+    .a{
+      border: brown double 4px;
+      margin: 1em;
+      padding: 0.5em;
+      background-color: darksalmon;
+      border-radius: 1em;
+      color: white;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
+<h2> <a href="./index.html" class="a">INICIO</a></h2>
+<!-- ///////////////////////////////////////////////////////// -->
 
-  <p></p>
+
+
+<!-- ///////////////////////////////////////////////////////// -->
 </body>
 </html>
