--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>FORMACIÓN </title>
+    <title>TEMAS </title>
   </head>
 
   <body>
@@ -49,18 +49,29 @@
       <h1> TEMAS</h1>
       <div>
         <ol>
+          <H2 class="cita">B</H2>
           <li class="li"><a href="../euangelium/bautismo.html">BAUTISMO</a></li>
           <li class="li"><a href="../euangelium/biblia/biblia.html">BIBLIA</a></li>
+          <H2 class="cita">C</H2>
+          <li class="li"><a href="../euangelium/hijo.html">CRISTO</a></li>
+          <H2 class="cita">D</H2>
           <li class="li"><a href="../euangelium/diezmo.html">DIEZMO</a></li>
+          <H2 class="cita">E</H2>
           <li class="li"><a href="../euangelium/eucaristia.html">EUCARISTIA</a></li>
-          <li class="li"><a href="../euangelium/hijo.html">EL HIJO</a></li>
+          <H2 class="cita">I</H2>
           <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
           <li class="li"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
+          <H2 class="cita">O</H2>
           <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
-          <li class="li"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
-          <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
-          <li class="li"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
+          <H2 class="cita">P</H2>
           <li class="li"><a href="../euangelium/perdónPecados.html">PERDÓN DE PECADOS</a></li>
+          <H2 class="cita">S</H2>
+          <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
+          <li class="li"><a href="./sabat.html">SABAT</a></li>
+          <H2 class="cita">T</H2>
+          <li class="li"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
+          <H2 class="cita">V</H2>
+          <li class="li"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
 
 
         </ol>
